# resource-rational-stereotyping

./: .gitignore  main.py  pyproject.toml
src/: blahut_arimoto.py  utils.py
tests/: test_resource_rational_stereotyping.py
