[tool.poetry]
name = "resource-rational-stereotyping"
version = "0.1.0"
description = ""
authors = ["Max Taylor-Davies <maxtaylordavies@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.38"
tqdm = "^4.67.1"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
